# rm_engine

./: .gitignore  .pre-commit-config.yaml  .treefmt.toml  Cargo.toml  README.md  deny.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.nix  ci.yml  pre_ci_sed_deps.rs
.readme_assets/: other.md  usage.md
examples/: config.nix  config.toml
src/: config.rs  main.rs
