[package]
name = "rm_engine"
version = "0.1.0"
edition = "2024"

license = "MIT"
documentation = "https://docs.rs/rm_engine"
repository = "https://github.com/valeratrades/rm_engine/tree/master/rm_engine"
homepage = "https://github.com/valeratrades/rm_engine"
authors = ["valeratrades"]
description = "My engine for risk-management"
readme = "README.md"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.cargo-machete]
ignored = ["derive-new", "color-eyre", "serde", "tokio", "v_utils"]

[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

[dependencies]
chrono = "0.4.39"
clap = { version = "^4.5.23", features = ["derive"] }
color-eyre = "^0.6.3"
config = { version = "^0.15.4" }
derive-new = "^0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
v_exchanges = { version = "0.2.0", path = "../v_exchanges/v_exchanges", features = ["binance", "bybit"] } #ga: rm path

v_utils = { features = ["io", "macros"], path = "../v_utils/v_utils", version = "^2.0.0" } #ga: rm path

[dev-dependencies]
insta = "1.42.0"
