cargo-features = ["codegen-backend"]

[package]
name = "rm_engine"
version = "0.1.0"
edition = "2024"

license = "MIT"
documentation = "https://docs.rs/rm_engine"
repository = "https://github.com/valeratrades/rm_engine/tree/master/rm_engine"
homepage = "https://github.com/valeratrades/rm_engine"
authors = ["valeratrades"]
description = "My engine for risk-management"
readme = "README.md"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.cargo-machete]
ignored = ["derive-new", "color-eyre", "serde", "tokio", "v_utils"]

[dependencies]
clap = { version = "^4.5.53", features = ["derive"] }
color-eyre = "^0.6.5"
config = { version = "^0.15.19" }
derive-new = "^0.7.0"
jiff = "^0.2.16"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
v_exchanges = { version = "^0.15.2", features = ["binance", "bybit", "kucoin", "mexc"] }
v_utils = { version = "2.11.0", features = ["io", "macros", "trades", "cli", "xdg"] } #ga: rm path
xdg = "^3.0.0"

[dev-dependencies]
insta = "1.44.1"

[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"
